# pub_sub_dfinity

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/common/: Cargo.toml
src/common/src/: lib.rs
src/pub_sub_example_assets/src/: index.html  index.js
src/publish/: Cargo.toml
src/publish/src/: lib.rs  publish.did
src/subscriber/: Cargo.toml
src/subscriber/src/: lib.rs  subscriber.did
