[package]
name = "common"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
ic-types = "0.2.0"
serde = "1.0.126"
serde_bytes = "0.11.5"

[dev-dependencies]
hex = "0.4"
serde_cbor = "0.11"